--- a/upowr/src/assets/scss/components/_custom.scss
+++ b/upowr/src/assets/scss/components/_custom.scss
@@ -11,7 +11,7 @@ body,html{min-height: 100%; height: 100%;}
 footer .menu.text-uppercase{font-size:10px; letter-spacing: 1.5px;}
 footer .menu.text-uppercase a{line-height: 18px;}
 .dropdown.menu > li > a.button{letter-spacing: 1.5px; padding: 0.8rem 1.25rem; margin-left: 2rem;}
-.dropdown.menu > li.menu-text{margin: 0 20px; padding: 0;}
+.dropdown.menu > li.menu-text{padding: 0;}
 .dropdown.menu > li.menu-text > a{color: $black; text-transform: uppercase; letter-spacing: 1.5px;}
 .top-bar, .top-bar ul{background: none;}
 
